--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -1,11 +1,18 @@
-[env:denky_d4]
+[env:esp32dev]
 platform = espressif32@5.2.0
-board = denky_d4
+board = esp32dev
 framework = arduino
-upload_port = /dev/cu.usbmodemflip_Vex91
-monitor_speed = 115200
-upload_speed = 115200
 
+; Flash Mode: "QIO"
+board_build.flash_mode = qio
+; Partition Scheme: "8M with spiffs"
+board_build.partitions = default_8MB.csv
+
+; Flash settings 8MB
+board_upload.flash_size  = 8MB
+board_upload.maximum_size = 8388608
+
+; Libraries
 lib_deps = 
     h2zero/NimBLE-Arduino@^1.4.1
     ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
@@ -14,9 +21,15 @@ lib_deps =
     me-no-dev/ESPAsyncWebServer
     bblanchon/ArduinoJson@^6.19.4
 
+; Build flags
 build_flags = 
     -I .platformio/packages/framework-arduinoespressif32/cores/esp32
     -w
     -Wl,-zmuldefs
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
+
+; Upload and monitor settings
+upload_port = /dev/cu.usbmodemflip_Vex91
+monitor_speed = 115200
+upload_speed = 115200
