--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -4,8 +4,8 @@ platform = espressif32@5.2.0
 board = esp32dev
 framework = arduino
 
-; Flash Mode: "QIO"
-board_build.flash_mode = qio
+; Flash Mode: "dio"
+board_build.flash_mode = dio
 ; Partition Scheme: "8M with spiffs"
 board_build.partitions = default_8MB.csv
 
@@ -31,6 +31,6 @@ build_flags =
     -mfix-esp32-psram-cache-issue
 
 ; Upload and monitor settings
-upload_port = /dev/cu.usbmodemflip_Vex91
+upload_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
 upload_speed = 115200
