--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-Firmware/.pio/
-Firmware/.pioenvs/
-Firmware/.piolibdeps/
-Firmware/.clang_complete
-Firmware/.vscode/
-Firmware/.sconsign.dblite
-Firmware/.pytest_cache/
-Firmware/.coverage
-Firmware/.pio/libdeps/
-Firmware/.pio/build/
+firmware/.pio/
+firmware/.pioenvs/
+firmware/.piolibdeps/
+firmware/.clang_complete
+firmware/.vscode/
+firmware/.sconsign.dblite
+firmware/.pytest_cache/
+firmware/.coverage
+firmware/.pio/libdeps/
+firmware/.pio/build/
