marauder firmware update

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -29,8 +29,10 @@ build_flags =
     -Wl,-zmuldefs
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
+    -DCONFIG_ASYNC_TCP_RUNNING_CORE=1
+    -DCONFIG_ASYNC_TCP_USE_WDT=0
 
 ; Upload and monitor settings
 upload_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
-upload_speed = 115200
+upload_speed = 921600
