--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,6 +1,6 @@
 ; Configuration for ESP32 PICO V3 02
 [env:esp32dev]
-platform = espressif32@5.2.0
+platform = espressif32@6.5.0
 board = esp32dev
 framework = arduino
 
@@ -21,6 +21,9 @@ lib_deps =
     me-no-dev/AsyncTCP
     me-no-dev/ESPAsyncWebServer
     bblanchon/ArduinoJson@^6.19.4
+    adafruit/Adafruit MAX1704X @ ^1.0.3
+    stevemarple/MicroNMEA @ ^2.0.6
+    plerup/EspSoftwareSerial @ ^8.2.0
 
 ; Build flags
 build_flags = 
