--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -36,6 +36,6 @@ build_flags =
     -DCONFIG_ASYNC_TCP_USE_WDT=0
 
 ; Upload and monitor settings
-upload_port = /dev/cu.usbserial-0001
+; upload_port = /dev/cu.usbserial-0001  ; Uncomment and adjust for your system
 monitor_speed = 115200
 upload_speed = 921600
